# fading-dag

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  builder-notes.md  tutorial-1-installation-and-first-per-realization-mi.md  tutorial-2-edge-spec-and-samplers.md  tutorial-3-ergodic-capacity-with-sgd-ascent.md  tutorial-4-outage-and-sigmoid-surrogate.md  tutorial-5-fading-mac-and-rate-functions.md
examples/: README.md  ergodic_mimo_precoder.py  outage_minimizing_precoder.py
fading_dag/: __init__.py  builder.py  information.py  krecursion.py  optimize.py  outage.py  projections.py  rate_region.py  samplers.py
tests/: test_builder.py  test_information_batched.py  test_krecursion_batched.py  test_optimize.py  test_outage.py  test_samplers.py  test_theoretical_validation.py
