[project]
name = "fading-dag"
version = "0.1.0"
description = "Fading-channel mutual information and SGD optimization for linear Gaussian DAGs, extending cmi-dag with mini-batched Monte Carlo over channel-matrix realizations."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Tadashi Wadayama", email = "wadayama@nitech.ac.jp" },
    { name = "Na Siqi" },
]
keywords = [
    "fading",
    "outage",
    "monte-carlo",
    "mimo",
    "mutual-information",
    "conditional-mutual-information",
    "gaussian-dag",
    "automatic-differentiation",
    "stochastic-gradient",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.12.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10",
]
dev = [
    "pytest>=8.0",
    "scipy>=1.13",
]

[project.urls]
Homepage = "https://github.com/wadayama/fading-dag"
Repository = "https://github.com/wadayama/fading-dag"
Issues = "https://github.com/wadayama/fading-dag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fading_dag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
